test/cases/compile_errors/stage1/obj/implicit_semicolon-while_statement.zig
export fn entry() void {
    while(true) {}
    var good = {};
    while(true) 1
    var bad = {};
}

// error
// backend=stage1
// target=native
//
// tmp.zig:4:18: error: expected ';' or 'else' after statement
